# telegram-submodules

AccountContext/: BUILD
ChatListUI/: BUILD
ChatListUI/Sources/: ChatListController.swift
HonistIntegration/: BUILD.bazel
HonistIntegration/Sources/UI/: HonistAiHomeViewController.swift  HonistBaseViewController.swift  HonistGemBadgeNode.swift  ProfileGemsViewController.swift  ProfileNameEditFeature.swift  ProfileNameEditViewController.swift  ProfileReferralsViewController.swift
HonistKit/: BUILD.bazel
HonistKit/Sources/HonistCore/: HonistRegistry.swift
HonistKit/Sources/HonistDesignSystem/: Tokens.swift
HonistKit/Sources/HonistFoundation/Environment/: AppEnvironment.swift
HonistKit/Sources/HonistFoundation/Errors/: HonistError.swift
HonistKit/Sources/HonistFoundation/Utilities/: AuthTokenProvider.swift  JWT.swift  TokenRefresher.swift
HonistKit/Sources/HonistModels/: ApiEnvelope.swift.swift  Common.swift
HonistKit/Sources/HonistNetworking/HTTP/: HonistApiClient.swift
HonistKit/Sources/HonistNetworking/Helper/: HMAC.swift  Multipart.swift
HonistKit/Sources/HonistRouting/: Router.swift
HonistKit/Sources/HonistStorage/: AuthTokenProviderAdapter.swift  KeyValueStore.swift  TokenStore.swift
HonistKit/Sources/HonistUIComponents/Controls/: HonistFilledTextField.swift  HonistLabel.swift  HonistPrimaryButton.swift  MetricCardView.swift
HonistKit/Sources/Services/Auth/: AuthFeature.swift
HonistKit/Sources/Services/Auth/API/: AuthenticationAPI.swift
HonistKit/Sources/Services/Auth/Logic/: AuthLogic.swift
HonistKit/Sources/Services/Auth/Models/: AuthModels.swift  SingleUserLocalStore.swift
HonistKit/Sources/Services/Auth/Support/: AuthAppServices.swift  AuthLifecycleObserver.swift  RefreshCoordinator.swift
HonistKit/Sources/Services/Payments/API/: PaymentProductIDs.swift  PaymentsAPI.swift  StoreKitClient.swift
HonistKit/Sources/Services/Payments/Logic/: PaymentsLogic.swift  PurchasesLogic.swift
HonistKit/Sources/Services/Payments/Models/: PaymentsDTOs.swift
HonistKit/Sources/Services/Payments/UI/: PaymentsPaywallFeature.swift  PaymentsPaywallView.swift  PaymentsPaywallViewController.swift  ProAccessPaywallFeature.swift  ProAccessPaywallView.swift  ProAccessPaywallViewController.swift  ProProductRowView.swift
HonistKit/Sources/Services/Profile/: ProfileFeature.swift  ReferralCodeFeature.swift
HonistKit/Sources/Services/Profile/API/: ProfileAPI.swift
HonistKit/Sources/Services/Profile/Logic/: ProfileLogic.swift
HonistKit/Sources/Services/Profile/Models/: HomeSectionsData.swift  ProfileModels.swift  ProfileReferralsDTO.swift  ProfileRequests.swift  ReferralModels.swift
HonistKit/Sources/Services/Profile/UI/: GemsHeaderView.swift  GemsOptionCell.swift  HonistAiHomeView.swift  MyGemsCardView.swift  ProfileGemsView.swift  ProfileNameEditView.swift  ProfileReferralsView.swift  ProfileViewController.swift  ReferralCodeView.swift  ReferralCodeViewController.swift
HonistKit/Sources/Umbrella/: HonistKit.swift
TelegramCore/: BUILD
TelegramCore/Sources/: Authorization.swift
TelegramCore/Sources/TelegramEngine/Privacy/: TelegramEnginePrivacy.swift
TelegramUI/: BUILD
TelegramUI/Components/Gifts/GiftViewScreen/Sources/: GiftViewScreen.swift
TelegramUI/Components/Settings/PeerNameColorScreen/Sources/: UserApperanceScreen.swift
TelegramUI/Images.xcassets/Chat List/Tabs/IconChats.imageset/: Contents.json
TelegramUI/Sources/: AppDelegate.swift  TelegramRootController.swift
