load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "HonistTelegramBridge",
    module_name = "HonistTelegramBridge",
    srcs = glob(["Sources/**/*.swift"]),
    deps = [
        "//submodules/HonistKit:HonistKit",
        "//submodules/Display:Display",
        "//submodules/TelegramPresentationData:TelegramPresentationData",
        "//submodules/AccountContext:AccountContext",
        "//submodules/AsyncDisplayKit:AsyncDisplayKit",
    ],
    visibility = ["//visibility:public"],
)
